# ttt-lm-jax

./: .env.example  .gitignore  =0.1.13  README.md  find_longest_gutenberg_books.py  pyproject.toml  test_perplexity.py
scripts/: run_perplexity_for_checkpoints.py  upload_hf_checkpoints.py
scripts/ttt_linear/: 1.3b.sh  125m.sh  125m_finetune_ppl.sh  125m_ppl.sh  125m_ppl_legacy.sh  350m.sh  760m.sh  exp_loop.sh  ppl.sh
ttt/: train.py  train2.py
ttt/dataloader/: README.md  download_data.py  language_modeling_hf.py  tokenization.py
ttt/infra/: checkpoint.py  jax_utils.py  perplexity_logger.py
ttt/models/: model.py  ttt_layer.py  ttt_layer_nobias.py  ttt_layer_nobias_frobenius.py  ttt_layer_nobias_gradl2norm.py  ttt_layer_nobias_kx.py  ttt_layer_nobias_l1l2reg.py  ttt_layer_nobias_orthonorm.py  ttt_layer_nobias_regularization.py
ttt/models/custom/: ttt_layer_nobias.py  ttt_layer_nobias_2x.py  ttt_layer_nobias_2x_v0.py  ttt_layer_nobias_2x_v1.py  ttt_layer_nobias_2x_v2.py  ttt_layer_nobias_2x_v4.py  ttt_layer_nobias_W0_noise.py  ttt_layer_nobias_bilevel.py  ttt_layer_nobias_bilevel_causalfix.py  ttt_layer_nobias_bilevel_causalfix_v2.py  ttt_layer_nobias_bilevel_causalfix_v3.py  ttt_layer_nobias_bilevel_causalfix_v4.py  ttt_layer_nobias_bilevel_causalfix_v5.py  ttt_layer_nobias_bilevel_causalfix_v8.py  ttt_layer_nobias_bilevel_frobenius.py  ttt_layer_nobias_bilevel_frobeniusv2.py  ttt_layer_nobias_bilevel_frobeniusv4.py  ttt_layer_nobias_bilevel_frobeniusv5.py  ttt_layer_nobias_bilevel_noleak.py  ttt_layer_nobias_bilevel_slowdisabled.py  ttt_layer_nobias_birun.py  ttt_layer_nobias_columnnorm.py  ttt_layer_nobias_disabled.py  ttt_layer_nobias_fixed_v0.py  ttt_layer_nobias_frobenius.py  ttt_layer_nobias_memory_rope.py  ttt_layer_nobias_mixed.py  ttt_layer_nobias_noise.py  ttt_layer_nobias_randominit.py  ttt_layer_nobias_rescale.py  ttt_layer_nobias_robust.py  ttt_layer_nobias_spectral.py  ttt_layer_nobias_trilevel.py
