[project]
name = "ttt-lm-jax"
version = "0.1.0"
description = "Test-Time Training for Language Models in JAX"
requires-python = "==3.11.*"

dependencies = [
    "jax==0.4.14",
    "jaxlib==0.4.14+cuda12.cudnn89; platform_system == 'Linux'",
    "numpy==1.26.4",
    "mlxu>=0.1.13",
    "tqdm",
    "flax==0.7.0",
    "scipy==1.12.0",


    "torch==2.3.0",

    "transformers==4.41.0",

    "datasets",
    "ml_collections",
    "einops",
    "optax==0.1.7",

    "matplotlib==3.9.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ttt*"]
exclude = ["pile_books3_minus_gutenberg*"]

[tool.setuptools]
zip-safe = false


[tool.uv]
find-links = [ "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html" ]



