[project]
name = "ttt-lm-jax"
version = "0.1.0"
description = "Test-Time Training for Language Models in JAX"
requires-python = "==3.10.*"

dependencies = [
    "jax==0.4.14",
    "jaxlib==0.4.14+cuda12.cudnn89; platform_system == 'Linux'",



 # "nvidia-cudnn-cu11>=8.9,<9.0; platform_system == 'Linux'",
 # "nvidia-cuda-cupti-cu12>=12.4; platform_system == 'Linux'",
 # "nvidia-cusolver-cu12>=11.7.3.90; platform_system == 'Linux'",


"mlxu>=0.1.13",

   "numpy==1.26.4",
    
    "tqdm",
    "flax==0.7.0",
    "scipy==1.12.0",


    "torch==2.3.0",

    "transformers==4.41.0",

    "datasets<=2.16",
    "fsspec==2023.9.2",


    "ml_collections",
    "einops==0.8.0",
    "optax==0.1.7",

    "matplotlib==3.9.0",


    "dotenv",
"pytest",

]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ttt*"]
exclude = ["pile_books3_minus_gutenberg*"]

[tool.setuptools]
zip-safe = false


[tool.uv]
find-links = [ "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html" ]



